--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
+    "@faker-js/faker": "^8.4.1",
     "@headlessui/react": "^2.1.2",
     "@heroicons/react": "^2.1.5",
     "@material-ui/core": "^4.12.4",
@@ -15,8 +16,10 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.3",
+    "faker": "^6.6.6",
     "react": "^18.3.1",
     "react-alice-carousel": "^2.9.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.0",
     "react-scripts": "5.0.1",
@@ -47,6 +50,7 @@
     ]
   },
   "devDependencies": {
+    "Faker": "^0.7.2",
     "tailwindcss": "^3.4.9"
   }
 }
