--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.3",
     "chart.js": "^4.4.4",
-    
+    "@mui/material": "^5.16.7",
    
     "react": "^18.3.1",
     "react-alice-carousel": "^2.9.1",
